--- a/setup.cfg
+++ b/setup.cfg
@@ -12,5 +12,5 @@ install_requires =
     requests>=2.28.2
     SQLAlchemy>=2.0.12
     uvicorn>=0.22.0
-    fastapi=>0.95.1
+    fastapi>=0.95.1
 python_requires = >=3.11
