--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ SQLAlchemy = "~2.0"
 uvicorn = "~0.23"
 
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.4.1"
+black = "^23.7.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
