--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.103.0"
 requests = "^2.31"
 uvicorn = "^0.23"
 sqlmodel = "^0.0.8"
+httpx = {extras = ["cli"], version = "^0.25.0"}
 
 
 [tool.poetry.group.dev.dependencies]
