--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true
+    "black-formatter.args": [
+        "--line-length 119"
+    ]
 }
