--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,10 @@ packages = [{ include = "apartment_scraper" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "~0.100"
-requests = "~2.31"
-SQLAlchemy = "~2.0"
-uvicorn = "~0.23"
-httpx = { extras = ["http2"], version = "^0.25.0" }
+fastapi = "^0.103.0"
+uvicorn = "^0.23"
+sqlmodel = "^0.0.8"
+httpx = {extras = ["http2"], version = "^0.25.0"}
 loguru = "^0.7.2"
 
 [tool.poetry.group.ci.dependencies]
