--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,6 @@
 services:
   web:
     build: .
+    command: "uvicorn apartment_scraper.api:app --host 0.0.0.0 --port 80 --reload"
     ports:
       - "8000:80"
-  # redis:
-  #   image: "redis:alpine"
