--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ uvicorn = "^0.23"
 sqlmodel = "^0.0.8"
 httpx = {extras = ["http2"], version = "^0.25.0"}
 loguru = "^0.7.2"
+psycopg2 = "^2.9.7"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.ci.dependencies]
 ruff = "^0.0.290"
