--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,29 @@
 services:
   web:
     build: .
+    image: apartment_scraper-web:latest
+    command: "uvicorn apartment_scraper.api:app --host 0.0.0.0 --port 80 --reload"
     ports:
       - "8000:80"
-  # redis:
-  #   image: "redis:alpine"
+    environment:
+      - USERNAME=postgres
+      - PASSWORD=postgres
+      - HOST=database
+      - DATABASE=apartments
+    depends_on:
+      - database
+    profiles: ["web"]
+
+  database:
+    image: postgres:16.0-bookworm
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    ports:
+      - "5432:5432"
+    profiles: ["db", "web"]
+volumes:
+  postgres_data:
