--- a/compose.yaml
+++ b/compose.yaml
@@ -19,7 +19,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: apartments
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     ports:
